# diffsense

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: customer_model.py  example_v1.py  example_v2.py  merge_conflict_example.py
src/diffsense/: __init__.py  cli.py  conflict_resolver.py  diff_engine.py  exceptions.py  formatter.py  git_manager.py  llm_manager.py  model_providers.py
tests/: test_cli.py  test_cli_git.py  test_conflict_resolver.py  test_diff_engine.py  test_formatter.py  test_git_manager.py  test_llm_manager.py  test_model_providers.py
