[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffsense"
dynamic = ["version"]
description = "AI-powered code diff tool"
authors = [
    {name = "Marco Gasparri"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["diff", "ai", "code-review", "llm", "development-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "rich>=13.7.0",
    "huggingface-hub>=0.23.0",
    "llama-cpp-python>=0.2.72",
    "typer>=0.12.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
diffsense = "diffsense.cli:app"

[project.urls]
Homepage = "https://github.com/marco-gasparri/diffsense"
Repository = "https://github.com/marco-gasparri/diffsense"
Issues = "https://github.com/marco-gasparri/diffsense/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diffsense*"]

[tool.setuptools.dynamic]
version = {attr = "diffsense.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
    "--cov=diffsense",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["llama_cpp.*", "huggingface_hub.*"]
ignore_missing_imports = true